--- a/Intex.html
+++ b/Intex.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="#ueber-uns">Über uns</a></li>
         <li><a href="#angebote">Angebote</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
+        <li><a href="#kontakt">Kontakte</a></li>
         <li><a href="#geschichte">Geschichte</a></li>
         <li><a href="#termine">Termine</a></li>
         <li><a href="#galerie">Galerie</a></li>
