--- a/dorfladen_zoeschingen.html
+++ b/dorfladen_zoeschingen.html
@@ -397,6 +397,18 @@ hr {
     <p>Adresse, Telefonnummer, Öffnungszeiten</p>
     <img src="Kontakt.jpg" alt="Kontakt">
   </section>
+<hr>
+  <section id="interner-bereich">
+    <h2>Interner Bereich für Mitglieder</h2>
+    <p>
+      Für vertrauliche Informationen und Dokumente besuchen Sie bitte unsere interne Webseite.
+      Der Zugriff ist nur für berechtigte Mitglieder möglich. Bitte melden Sie sich mit einem freigegebenen Google-Konto an.
+    </p>
+    <a href="https://sites.google.com/view/dorfladen-zoeschingen-intern/startseite" target="_blank" class="button-link">
+      ➤ Zur internen Google-Webseite
+    </a>
+  </section>
+
 
 </main>
 
